I did not dig the fixed background on the #recent section so I switched it back to scroll. Too much of a good thing, IMO.

--- a/css/style.css
+++ b/css/style.css
@@ -617,7 +617,7 @@ div[role=main] {
 
 #recent-wrapper {
 	height: 719px;
-	background: url(../img/recent-stories-bg.jpg) no-repeat center center fixed;
+	background: url(../img/recent-stories-bg.jpg) no-repeat center center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
